ScreenShare: add visible status and progress logging to broadcaster page

--- a/screenshare-share.html
+++ b/screenshare-share.html
@@ -15,6 +15,7 @@
       <button id="startBtn" style="background:#10b981;color:#fff">Start Sharing</button>
       <button id="stopBtn" style="background:#ef4444;color:#fff;display:none">Stop</button>
     </div>
+    <div id="status" style="margin-top:10px;font-size:13px;color:#60a5fa;text-align:left"></div>
     <p style="font-size:12px;color:#9ca3af;margin-top:8px">This page connects to the viewer using Firebase Realtime Database for signaling.</p>
   </div>
 
